// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWithStroke /> with default props matches with snapshot 1`] = `
<div
  className="title-with-stroke__StyledTitleWithStroke-sc-10vl00i-0 bBGrlM TitleWithStroke--align-left"
>
  <h1
    className="TitleWithStroke__title TitleWithStroke__title--primary"
  >
    Lorem ipsum dolor sit amet…
  </h1>
  <span
    className="TitleWithStroke__stroke TitleWithStroke__stroke--primary"
  />
</div>
`;

exports[`<TitleWithStroke /> with more props matches with snapshot 1`] = `
<div
  className="title-with-stroke__StyledTitleWithStroke-sc-10vl00i-0 bBGrlM TitleWithStroke--align-center TitleWithStroke--italic"
>
  <h4
    className="TitleWithStroke__title TitleWithStroke__title--tertiary"
  >
    Lorem ipsum dolor sit amet…
  </h4>
  <span
    className="TitleWithStroke__stroke TitleWithStroke__stroke--tertiary"
  />
</div>
`;
